Bug 974643. The displayport is not relevant to position: fixed content, only to scrolling content. r=roc

The relevant part of postion: fixed items lies within the viewport, which is the scroll position clamping scroll port size if one has been set.